hack in css to stop some links from becoming invisible on hover

--- a/h1ds_core/static/css/style.css
+++ b/h1ds_core/static/css/style.css
@@ -1101,6 +1101,11 @@ a:hover {
     background-color:#369;
 }
 
+/* hover background-color not working in some cases. */
+div.mbox a:hover {
+    color:red;
+}
+
 /* header */
 
 header {
